--- a/code/templates/core/searchbar.html
+++ b/code/templates/core/searchbar.html
@@ -3,8 +3,9 @@
 <div class="row" style="margin-top:15px;">
     <div class="panel" id="searchbar">
     <div class="panel-body">
-    <form class="form-inline" action="" method="get" name="main_search" id="mainsearch">
+    <form class="form-inline" action="#" method="get" name="main_search" id="mainsearch">
         <div class="form-group">
+            <label class="sr-only" for="select-category">Search Category</label>
             <select class="form-control" id="select-category">
                 <option>Select a search category</option>
                 <option value="search_labels">Drug Names</option>
@@ -13,6 +14,7 @@
                 <option value="search_manufacturers">Manufacturers</option>
             </select>
             <div class="input-group">
+                <label class="sr-only" for="search-term">Search Term</label>
                 <input type="search" class="form-control" name="q" id='search-term' placeholder="Enter keyword">
                 <span class="input-group-btn">
                     <button class="btn btn-primary" type="submit" id="search-category">GO</button>
