--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -14,7 +14,7 @@
 {% block text %}
     <div class="row">
         <div class="col-xs-12">
-            <h1>Adverse Event Details
+            <h1>Adverse Event Details<br />
                 <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
         </div>
@@ -34,7 +34,7 @@
             <!-- tab 1 -->
             <div role="tabpanel" class="tab-pane active fda-table-accordion" id="details">
                 <!-- accordion panel groups -->
-               <div class="panel-group" aria-multiselectable="true">
+               <div class="panel-group" role="tablist" aria-multiselectable="true">
                     {% for result in events %}
                         <div class="panel panel-default">
                             <div class="panel-heading">
