--- a/code/templates/core/details.html
+++ b/code/templates/core/details.html
@@ -10,6 +10,7 @@
         {% endblock %}
     </div>
 
+{#    TODO - add browse-type to detail views for searchbar#}
     {% include 'core/searchbar.html' %}
 
     {% block text %}
