--- a/code/templates/core/searchbar.html
+++ b/code/templates/core/searchbar.html
@@ -16,6 +16,8 @@
             <div class="input-group">
                 <label class="sr-only" for="search-term">Search Term</label>
                 <input type="search" class="form-control" name="q" id='search-term' placeholder="Enter keyword">
+                <label class="sr-only" for="search-state">Search State</label>
+                <input class="form-control" type="text" id='search-state' placeholder="Enter US state" style="display:none">
                 <span class="input-group-btn">
                     <button class="btn btn-primary" type="submit" id="search-category">GO</button>
                 </span>
