continuing on f/e change list

--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -35,6 +35,11 @@
             <div role="tabpanel" class="tab-pane active fda-table-accordion" id="details">
                 <!-- accordion panel groups -->
                <div class="panel-group" role="tablist" aria-multiselectable="true">
+
+                    {% if events|length == 0 %}
+                        <p class="text-info">No results found for adverse event: {{ q|replace_plus_signs }}</p>
+                    {% endif %}
+
                     {% for result in events %}
                         <div class="panel panel-default">
                             <div class="panel-heading">
