--- a/code/templates/core/accessibility.html
+++ b/code/templates/core/accessibility.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h1>About</h1>
+            <h1>Accessibility</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
                 mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
                 ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
@@ -24,11 +24,6 @@
                 ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
                 ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla.</p>
 
-            <a name="anchor1" id="anchor1">Licensing Information</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
-                mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
-                ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
-                ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla.</p>
         </div>
     </div>
 
