--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -75,15 +75,22 @@
                 <div class="col-xs-12 text-center">
                     <ul class="list-inline">
                         <li><a href="{% url 'about' %}">About</a></li>
-                        <li><a href="{% url 'contact' %}">Contact</a></li>
+                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                        <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <p>Licensing Information</p>
+                    <a href="{% url 'about' %}#licensing">Licensing Information</a>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <p class="text-warning"><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla,
+                        eget malesuada urna justo at ex.</p>
+                </div>
             </div>
         </div>
     </footer>
