--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -42,12 +42,17 @@
                 <div role="tabpanel" class="tab-pane active fda-table-accordion" id="labels">
                     <!-- accordion panel groups -->
                     <div class="panel-group" role="tablist" aria-multiselectable="true">
+
+                        {% if labels|length == 0 %}
+                            <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
+                        {% endif %}
+
                         {% for result in labels %}
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
                                         <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
-                                            {{ result.brand_name.0 }}: {{ result.id }}
+                                            {{ result.brand_name.0 }} ({{ result.manufacturer.0 }}) &mdash; SPL-ID {{ result.id }}
                                         </a>
                                     </h4>
                                 </div>
@@ -87,6 +92,11 @@
             <div role="tabpanel" class="tab-pane fda-table-accordion" id="events">
                 <!-- accordion panel groups -->
                 <div class="panel-group" role="tablist" aria-multiselectable="true">
+
+                {% if events|length == 0 %}
+                    <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
+                {% endif %}
+
                 {% for result in events %}
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -167,6 +177,11 @@
             <div role="tabpanel" class="tab-pane fda-table-accordion" id="enforcements">
                 <!-- accordion panel groups -->
                 <div class="panel-group" role="tablist" aria-multiselectable="true">
+
+                {% if enforcements|length == 0 %}
+                    <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
+                {% endif %}
+
                 {% for result in enforcements %}
                     <div class="panel panel-default">
                         <div class="panel-heading">
