--- a/code/templates/core/landing_adverse_events.html
+++ b/code/templates/core/landing_adverse_events.html
@@ -15,7 +15,8 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Adverse Events</h1>
-            <p>Select an event from the list to view current event-related information</p>
+            <p>Select an adverse event from the list below or enter an event into the search
+                above to view current related information
         </div>
     </div>
 {% endblock %}
@@ -26,6 +27,9 @@
         <div class="col-xs-12">
             <div class="panel">
                 <div class="panel-body">
+
+                    {% include 'core/alphanav.html' %}
+
                     <dl class="list-group fda-list-group">
                         <dt class="list-group-item">
                             Adverse Event
