--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -15,7 +15,8 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Enforcement Reports</h1>
-            <p>Select a state on the map to view current enforcement reports</p>
+            <p>Select a state from the map below or enter a state into the search above
+                to view current related information</p>
         </div>
     </div>
 
@@ -37,6 +38,9 @@
         <div class="col-xs-12">
             <div class="panel">
                 <div class="panel-body">
+
+                    {% include 'core/alphanav.html' %}
+
                     <dl class="list-group fda-list-group">
                         <dt class="list-group-item">
                             State
