--- a/code/templates/core/landing_manufacturers.html
+++ b/code/templates/core/landing_manufacturers.html
@@ -15,7 +15,8 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Manufacturers</h1>
-            <p>Select a manufacturer from the list to view current drug-related information</p>
+            <p>Select a manufacturer from the list below or enter a manufacturer name into the search above
+                to view current related information</p>
         </div>
     </div>
 {% endblock %}
@@ -26,15 +27,16 @@
         <div class="col-xs-12">
             <div class="panel">
                 <div class="panel-body">
+
+                    {% include 'core/alphanav.html' %}
+
                     <dl class="list-group fda-list-group">
                         <dt class="list-group-item">
                             Manufacturer Name
                         </dt>
                         {% for term in terms %}
                          <dd class="list-group-item">
-                            <a href="{% url 'search_manufacturers' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }}
-                                <span class="badge pull-right">{{ term.count }}</span>
-                            </a>
+                            <a href="{% url 'search_manufacturers' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }}</a>
                         </dd>
                         {% endfor %}
                     </dl>
