--- a/code/templates/core/contact.html
+++ b/code/templates/core/contact.html
@@ -21,6 +21,14 @@
 
             <div class="panel">
                 <div class="panel-body">
+                    {% if errors|length > 0 %}
+                        <div class="errors text-warning">
+                            Please correct the following:
+                            {{ errors }}
+
+                            {{ form_data }}
+                        </div>
+                    {% endif %}
                     <form name="contact-form" action="{% url 'contact' %}" method="post" id="contact-form">
                         {% csrf_token %}
                         <div class="form-group">
@@ -29,11 +37,11 @@
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="contact-email">Email</label>
-                            <input type="email" class="form-control" name="contact_email" id="contact-email" placeholder="Email" required="true">
+                            <input type="text" class="form-control" name="contact_email" id="contact-email" placeholder="Email" required="true">
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="contact-comment">Comment</label>
-                            <textarea class="form-control" rows="3" name="contact_comment" id="contact-comment" placeholder="Comment"></textarea>
+                            <textarea class="form-control" rows="3" name="contact_comment" id="contact-comment" placeholder="Comment" required="true"></textarea>
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
@@ -45,16 +53,5 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
-// validate email address and text area before submitting form
-    $('#contact-form').submit(function() {
-        // check that the email is valid
-        alert('NAME' + $('#contact-name').value());
-        alert('EMAIL' + $('#contact-email').value());
-        // check that something was entered in the text box
-
-        // submit the form
-    });
-</script>
 
 {% endblock %}
