--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -2,6 +2,7 @@
 
 {% load staticfiles %}
 {% load url_tags %}
+{% load humanize %}
 
 {% block title %}
 <title>FDA Drug Monitor - Adverse Event Details</title>
@@ -55,17 +56,21 @@
                                          <caption>Reporting Sources</caption>
                                          <tbody>
                                            {% for key, value in result.safety_data.items %}
+                                           {% if key != 'safety_report' %}
                                            <tr>
-                                             <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                                             <td>{% if value|is_list %}
-                                                   {% for val in value %}
-                                                     {{ val|default:"N/A" }}<br />
-                                                   {% endfor %}
-                                                 {% else %}
-                                                   {{ value|default:"N/A" }}
-                                                 {% endif %}
-                                             </td>
+                                             <th scope="row">
+                                                 {{ key|replace_underscores|capfirst }}
+                                             </th>
+                                            <td>{% if value|is_list %}
+                                                  {% for val in value %}
+                                                    {{ val|default:"N/A" }}<br />
+                                                  {% endfor %}
+                                                {% else %}
+                                                    {{ value|default:"N/A" }}
+                                                {% endif %}
+                                            </td>
                                            </tr>
+                                           {% endif %}
                                            {% endfor %}
                                          </tbody>
                                     </table>
