--- a/code/templates/core/accessibility.html
+++ b/code/templates/core/accessibility.html
@@ -12,18 +12,18 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Accessibility</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
-                mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
-                ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
-                ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla. Aliquam rutrum
-                nunc et nisi venenatis, sed feugiat mi aliquet. Fusce et risus massa. Donec suscipit volutpat quam,
-                ac maximus mauris facilisis sit amet. Maecenas sed lobortis turpis, non sagittis nulla. </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
-                mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
-                ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
-                ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla.</p>
+            <h2>Access to Our Web Site</h2>
+            <p>We believe that our web site is compliant with Section 508 and W3C accessibility design guidelines.
+                Artemis Consulting is making every effort to make its FDA Drug Monitor available to all members of
+                the public.</p>
 
+            <p>If you are a person with a disability and you have trouble using our web site&ndash;or if you experience
+                difficulty using any of our services, products, or facilities&ndash;please tell us about the problem.
+
+            <p>Send us an e-mail message at:
+            <a href="mailto:accessibility-feedback@artemisconsultinginc.com">accessibility-feedback@artemisconsultinginc.com</a>
+            </p>
         </div>
     </div>
 
