--- a/code/templates/core/alphanav.html
+++ b/code/templates/core/alphanav.html
@@ -1,32 +1,32 @@
 {# alphabet navigation for use throughout the site #}
-
-<div class="alpha-nav">
-    <a id="show-all" href="#">All</a>
-    <a id="show-nums" href="#">0-9</a>
-    <a id="show-a" href="#">A</a>
-    <a id="show-b" href="#">B</a>
-    <a id="show-c" href="#">C</a>
-    <a id="show-d" href="#">D</a>
-    <a id="show-e" href="#">E</a>
-    <a id="show-f" href="#">F</a>
-    <a id="show-g" href="#">G</a>
-    <a id="show-h" href="#">H</a>
-    <a id="show-i" href="#">I</a>
-    <a id="show-j" href="#">J</a>
-    <a id="show-k" href="#">K</a>
-    <a id="show-l" href="#">L</a>
-    <a id="show-m" href="#">M</a>
-    <a id="show-n" href="#">N</a>
-    <a id="show-o" href="#">O</a>
-    <a id="show-p" href="#">P</a>
-    <a id="show-q" href="#">Q</a>
-    <a id="show-r" href="#">R</a>
-    <a id="show-s" href="#">S</a>
-    <a id="show-t" href="#">T</a>
-    <a id="show-u" href="#">U</a>
-    <a id="show-v" href="#">V</a>
-    <a id="show-w" href="#">W</a>
-    <a id="show-x" href="#">X</a>
-    <a id="show-y" href="#">Y</a>
-    <a id="show-z" href="#">Z</a>
+<div class="alpha-nav text-center">
+    <ul class="list-inline">
+        <li><a data-filter="all" href="#">All</a></li>
+        <li><a data-filter="a" href="#">A</a></li>
+        <li><a data-filter="b" href="#">B</a></li>
+        <li><a data-filter="c" href="#">C</a></li>
+        <li><a data-filter="d" href="#">D</a></li>
+        <li><a data-filter="e" href="#">E</a></li>
+        <li><a data-filter="f" href="#">F</a></li>
+        <li><a data-filter="g" href="#">G</a></li>
+        <li><a data-filter="h" href="#">H</a></li>
+        <li><a data-filter="i" href="#">I</a></li>
+        <li><a data-filter="j" href="#">J</a></li>
+        <li><a data-filter="k" href="#">K</a></li>
+        <li><a data-filter="l" href="#">L</a></li>
+        <li><a data-filter="m" href="#">M</a></li>
+        <li><a data-filter="n" href="#">N</a></li>
+        <li><a data-filter="o" href="#">O</a></li>
+        <li><a data-filter="p" href="#">P</a></li>
+        <li><a data-filter="q" href="#">Q</a></li>
+        <li><a data-filter="r" href="#">R</a></li>
+        <li><a data-filter="s" href="#">S</a></li>
+        <li><a data-filter="t" href="#">T</a></li>
+        <li><a data-filter="u" href="#">U</a></li>
+        <li><a data-filter="v" href="#">V</a></li>
+        <li><a data-filter="w" href="#">W</a></li>
+        <li><a data-filter="x" href="#">X</a></li>
+        <li><a data-filter="y" href="#">Y</a></li>
+        <li><a data-filter="z" href="#">Z</a></li>
+    </ul>
 </div>
