--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -1,4 +1,4 @@
-{% extends "core/details.html" %}
+{% extends "core/base.html" %}
 
 {% load staticfiles %}
 {% load url_tags %}
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block image %}
-    <img src="{% static "images/drugs.png" %}" class="img-responsive center-block" alt="drug labels banner image">
+    <img src="{% static "images/manufacturers-short.png" %}" class="img-responsive center-block" alt="drug labels banner image">
+{% endblock %}
+
+{% block search %}
+    {% include 'core/searchbar.html' with search_category='manufacturers'%}
 {% endblock %}
 
 {% block text %}
@@ -42,190 +46,20 @@
                 <!-- tab 1 -->
                 <div role="tabpanel" class="tab-pane active fda-table-accordion" id="labels">
                     <!-- accordion panel groups -->
-                    <div class="panel-group" role="tablist" aria-multiselectable="true">
-
-                        {% if labels|length == 0 %}
-                            <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
-                        {% endif %}
-
-                        {% for result in labels %}
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
-                                            {{ result.brand_name.0 }} ({{ result.manufacturer.0 }}) &mdash; SPL-ID {{ result.id }}
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div class="panel-collapse collapse" id="panel{{ forloop.counter }}">
-                                    <div class="panel-body">
-                                        <table class="table table-striped table-bordered">
-                                            <caption class="sr-only">{{ result.brand_name.0 }}: {{ result.id }}</caption>
-                                            <tbody>
-                                                {% for key, value in result.items %}
-                                                    <tr>
-                                                        <th scope="row"><strong>{{ key|replace_underscores|capfirst }}</strong></th>
-                                                        <td class="cell">
-                                                            <div class="text">
-                                                              {% if value|is_list %}
-                                                                {% for val in value %}
-                                                                  {{ val|default:"N/A" }}
-                                                                {% endfor %}
-                                                              {% else %}
-                                                                {{ value|default:"N/A" }}
-                                                              {% endif %}
-                                                            </div>
-                                                            <span class="more">More...</span>
-                                                            <span class="less" style="display:none;">Less...</span>
-                                                        </td>
-                                                    </tr>
-                                                {% endfor %}
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
+                    {% include 'core/tab_labels.html' with prefix='labels' %}
                 </div><!-- end tab 1 -->
 
             <!-- tab 2 -->
             <div role="tabpanel" class="tab-pane fda-table-accordion" id="events">
                 <!-- accordion panel groups -->
-                <div class="panel-group" role="tablist" aria-multiselectable="true">
-
-                {% if events|length == 0 %}
-                    <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
-                {% endif %}
-
-                {% for result in events %}
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" href="#tab2_panel{{ forloop.counter }}" aria-expanded="false">
-                                Safety Report Id: {{ result.safety_data.safety_report }} (received: {{ result.safety_data.receive_date }})
-                            </a>
-                            </h4>
-                        </div>
-                        <div class="panel-collapse collapse" id="tab2_panel{{ forloop.counter }}">
-                            <div class="panel-body">
-                                <table class="table table-striped table-bordered">
-                                    <caption>Reporting Sources</caption>
-                                    <tbody>
-                                      {% for key, value in result.safety_data.items %}
-                                      {% if key != 'safety_report' %}
-                                      <tr>
-                                        <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                                        <td>{% if value|is_list %}
-                                              {% for val in value %}
-                                                {{ val|default:"N/A" }}<br />
-                                              {% endfor %}
-                                            {% else %}
-                                                {{ value|default:"N/A" }}
-                                            {% endif %}
-                                        </td>
-                                      </tr>
-                                      {% endif %}
-                                      {% endfor %}
-                                  </tbody>
-                                </table>
-                                <table class="table table-striped table-bordered">
-                                    <caption>
-                                        Patient Data
-                                    </caption>
-                                    <tbody>
-                                      {% for key, value in result.patient_data.items %}
-                                      <tr>
-                                        <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                                        <td>{% if value|is_list %}
-                                              {% for val in value %}
-                                                {{ val|default:"N/A" }}<br />
-                                              {% endfor %}
-                                            {% else %}
-                                              {{ value|default:"N/A" }}
-                                            {% endif %}
-                                        </td>
-                                      </tr>
-                                      {% endfor %}
-                                    </tbody>
-                                </table>
-                                <table class="table table-striped table-bordered">
-                                    <caption>
-                                    Drug Data
-                                    </caption>
-                                    <tbody>
-                                      {% for key, value in result.label_data.items %}
-                                      <tr>
-                                        <th scope="row">{{ key|replace_underscores|capfirst }}</th>
-                                        <td>{% if value|is_list %}
-                                              {% for val in value %}
-                                                {{ val|default:"N/A" }}<br />
-                                              {% endfor %}
-                                            {% else %}
-                                              {{ value|default:"N/A" }}
-                                            {% endif %}
-                                        </td>
-                                      </tr>
-                                      {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                </div>
+                   {% include 'core/tab_events.html' with prefix='events'%}
             </div><!-- end tab 2 -->
 
             <!-- tab 3 -->
             <div role="tabpanel" class="tab-pane fda-table-accordion" id="enforcements">
                 <!-- accordion panel groups -->
-                <div class="panel-group" role="tablist" aria-multiselectable="true">
-
-                {% if enforcements|length == 0 %}
-                    <p class="text-info">No results found for manufacturer: {{ q|replace_plus_signs }}</p>
-                {% endif %}
-
-                {% for result in enforcements %}
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" href="#tab3_panel{{ forloop.counter }}" aria-expanded="false">
-                                Recall Number: {{ result.recall_number }} [{{ result.report_date }}: {{ result.city }}, {{ result.state }}]
-                            </a>
-                            </h4>
-                        </div>
-                        <div class="panel-collapse collapse" id="tab3_panel{{ forloop.counter }}">
-                          <div class="panel-body">
-                              <table class="table table-striped table-bordered">
-                                  <caption class="sr-only"> Recall Number: {{ result.recall_number }}</caption>
-                                  <tbody>
-                                    {% for key, value in result.items %}
-                                        <tr>
-                                            <th scope="row">{{ key|replace_underscores|capfirst }}
-                                            </th>
-                                            <td class="cell">
-                                                <div class="text">
-                                                  {% if value|is_list %}
-                                                    {% for val in value %}
-                                                      {{ val|default:"N/A" }}<br />
-                                                    {% endfor %}
-                                                  {% else %}
-                                                    {{ value|default:"N/A" }}
-                                                  {% endif %}
-                                                </div>
-                                                <span class="more">More...</span>
-                                                <span class="less" style="display:none;">Less...</span>
-                                             </td>
-                                        </tr>
-                                    {% endfor %}
-                                  </tbody>
-                              </table>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                </div>
-              </div><!-- end tab 3 -->
+                   {% include 'core/tab_enforcements.html' with prefix='enforce'%}
+            </div><!-- end tab 3 -->
             </div> <!-- end tab content -->
         </div> <!-- end panel-body -->
     </div> <!-- end panel -->
