--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -1,4 +1,4 @@
-{% extends "core/browse.html" %}
+{% extends "core/base.html" %}
 
 {% load staticfiles %}
 {% load url_tags %}
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block image %}
-    <img src="{% static "images/enforceable.png" %}" class="img-responsive center-block" alt="enforcement reports banner image">
+    <img src="{% static "images/enforceable-short.png" %}" class="img-responsive center-block" alt="enforcement reports banner image">
+{% endblock %}
+
+{% block search %}
+    {% include 'core/searchbar.html' with search_category='enforcements'%}
 {% endblock %}
 
 {% block text %}
@@ -33,7 +37,7 @@
     </div>
 {% endblock %}
 
-{% block browse_body %}
+{% block details %}
     <!-- browse list -->
     <div class="row">
         <div class="col-xs-12">
@@ -47,7 +51,7 @@
                             State
                         </dt>
                         {% for term in terms %}
-                         <dd class="list-group-item">
+                         <dd class="list-group-item letter {{ term.term.0|lower }}">
                             <a href="{% url 'search_enforcements' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }}
                                 <span class="badge pull-right">{{ term.count|intcomma }}</span>
                             </a>
